; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_draglist.c_DragList_Notify.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_draglist.c_DragList_Notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@uDragListMessage = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @DragList_Notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DragList_Notify(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 2
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  store i32 %8, i32* %9, align 4
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %11 = call i32 @GetCursorPos(i32* %10)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @GetParent(i32 %12)
  %14 = load i32, i32* @uDragListMessage, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @GetDlgCtrlID(i32 %15)
  %17 = ptrtoint %struct.TYPE_2__* %5 to i32
  %18 = call i32 @SendMessageW(i32 %13, i32 %14, i32 %16, i32 %17)
  ret i32 %18
}

declare dso_local i32 @GetCursorPos(i32*) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1

declare dso_local i32 @GetParent(i32) #1

declare dso_local i32 @GetDlgCtrlID(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
